<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido_a_project_manager"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:textSize="25sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrate"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/txtnombre_registro"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/ingrese_su_nombre"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress" />
    <EditText
        android:id="@+id/txtcorreo_registro"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/ingrese_su_correo"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress" />
    <EditText
        android:id="@+id/txtclave_registro"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/ingrese_su_password"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress" />
    <CheckBox
        android:id="@+id/chkmostrar_registro"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/mostrar_contrase_a"/>
    <TextView
        android:id="@+id/btn_open_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ya_tienes_cuenta_accede"/>
    <Button
        android:id="@+id/btn_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crear_cuenta"/>
</LinearLayout>