<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearProyectoActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crear_proyecto_nuevo"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/txtnombre_proyecto"
            android:layout_width="match_parent"
            android:hint="@string/nombre_del_proyecto"
            android:layout_height="48dp"/>
        <EditText
            android:id="@+id/txtubicacion_proyecto"
            android:layout_width="match_parent"
            android:hint="@string/ubicaci_n_del_proyecto"
            android:layout_height="48dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha_de_inicio"/>
        <DatePicker
            android:id="@+id/fechainicio_proyecto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha_de_finalizaci_n_prevista"/>
        <DatePicker
            android:id="@+id/fechafin_proyecto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/txtdescripcion_proyecto"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/descripci_n_del_proyecto"/>
        <Button
            android:id="@+id/btnguardarproyecto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crear"/>
    </LinearLayout>
</ScrollView>